<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_favorites"
        android:orderInCategory="100"
        android:icon="@drawable/ic_favorites"
        android:title="@string/action_favorites"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_add_product"
        android:orderInCategory="100"
        android:title="@string/add_product_action"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_add_service"
        android:orderInCategory="100"
        android:title="@string/add_service_action"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_add_store"
        android:orderInCategory="100"
        android:title="@string/add_store_action"
        app:showAsAction="never" />
</menu>