<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <ImageView
            android:id="@+id/imgStore"
            android:layout_width="0dp"
            android:layout_height="130dp"
            android:layout_weight="1.7"
            app:srcCompat="@drawable/store_template"
            android:contentDescription="@string/product_image_reference" />

        <Button
            android:id="@+id/btnChooseImage"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:background="@drawable/round_button_red"
            android:text="@string/up_image"
            android:textColor="@color/black"
            android:textColorHighlight="@color/black"
            android:textColorLink="@color/black"
            android:textSize="13sp"
            app:backgroundTint="@null"
            app:fontWeight="900"
            tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck,TextContrastCheck" />

    </LinearLayout>

    <TextView
        android:id="@+id/globalWarning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text=""
        android:textColor="@color/main_blue"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="bold"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginVertical="3dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/labelInputAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="5dp"
            android:text='@string/form_address_Store'
            android:textColor="@color/main_red"
            android:textSize="17sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/inputAddress"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:autofillHints="Store Name"
            android:background="@drawable/bg_borders_red"
            android:ems="10"
            android:hint="@string/form_address_Store"
            android:layout_weight="1"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:padding="8dp"
            android:text=""
            tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/warningAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:textColor="@color/main_blue"
            android:layout_marginStart="3dp"
            android:text=""
            android:visibility="gone"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginVertical="3dp">

        <TextView
            android:id="@+id/labelInputDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="5dp"
            android:text='@string/product_form_description'
            android:textColor="@color/main_red"
            android:textSize="17sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/inputDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Store Description"
            android:background="@drawable/bg_borders_red"
            android:ems="10"
            android:gravity="start"
            android:hint="@string/product_form_description"
            android:inputType="textMultiLine"
            android:lines="3"
            android:maxLength="500"
            android:minHeight="48dp"
            android:padding="8dp"
            tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/warningDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:textColor="@color/main_blue"
            android:layout_marginStart="3dp"
            android:text=""
            android:visibility="gone"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="3dp"
        android:baselineAligned="false"
        android:gravity="center">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/labelInputLatitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="5dp"
                android:text="@string/store_map_latitud"
                android:textColor="@color/main_red"
                android:textSize="17sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/inputLatitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:autofillHints="Product Price"
                android:background="@drawable/bg_borders_red"
                android:ems="10"
                android:hint="@string/store_map_latitud"
                android:inputType="numberDecimal"
                android:minHeight="48dp"
                android:padding="8dp"
                tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/warningLatitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:textColor="@color/main_blue"
                android:layout_marginStart="3dp"
                android:text=""
                android:visibility="gone"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/labelInputLongitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="5dp"
                android:text="@string/store_form_longitude"
                android:textColor="@color/main_red"
                android:textSize="17sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/inputLongitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Store Longitude"
                android:background="@drawable/bg_borders_red"
                android:layout_marginStart="8dp"
                android:ems="10"
                android:hint="@string/store_form_longitude"
                android:inputType="numberDecimal"
                android:minHeight="48dp"
                android:padding="8dp"
                tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/warningLongitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:textColor="@color/main_blue"
                android:layout_marginStart="3dp"
                android:text=""
                android:visibility="gone"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="3dp"

        android:orientation="vertical">

        <TextView
            android:id="@+id/labelInputCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="5dp"
            android:text="@string/store_form_city"
            android:textColor="@color/main_red"
            android:textSize="17sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/inputCity"
            style="@style/spinner_style_red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:autofillHints="Store Mode"
            android:ems="10"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/warningCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:textColor="@color/main_blue"
            android:layout_marginStart="3dp"
            android:text=""
            android:visibility="gone"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="3dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/labelInputState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="5dp"
            android:text="@string/store_form_state"
            android:textColor="@color/main_red"
            android:textSize="17sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/inputState"
            style="@style/spinner_style_red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:autofillHints="Store Mode"
            android:ems="10"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/warningState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:textColor="@color/main_blue"
            android:layout_marginStart="3dp"
            android:text=""
            android:visibility="gone"/>

    </LinearLayout>

</LinearLayout>